# stark-curve

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: rust.yml
src/: constants.rs  lib.rs
src/core/: mod.rs  wrapper.rs
tests/: cross_tests.rs  test_vectors.rs
